# mini-rusaint

./: Cargo.toml  LICENSE  README.md
src/: applications.rs  lib.rs  main.rs  session.rs
src/applications/: course_grades.rs  model.rs
src/applications/course_grades/: model.rs
src/webdynpro/: client.rs  event.rs
tests/: course_grades_tests.rs  event_tests.rs
uniffi-bindgen/: Cargo.toml
