[workspace]
members = [
    "packages/mini-rusaint",
    "packages/mini-rusaint-ffi",
    "uniffi-bindgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

authors = ["JOONGGON LEE <2wndrhs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
uniffi = "0.28"
thiserror = "2.0.11"
tokio = "1.43.0"
